Sat Jul  5 05:05:53 2014  Vipul A M  <vipulnsward@gmail.com>

	* lib/irb/locale.rb (IRB::Locale#modifier): fix wrong attr_reader
	  `modifieer` => `modifier` from irb locale.  [fix GH-656]

Fri Jul  4 20:45:26 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: rename symbols::sym_id to symbols::str_id.
	  This table is not {Symbol => ID} table, but
	  {String => ID} table.

	* parse.y (lookup_sym_id): also rename lookup_sym_id() to
	  lookup_str_id() because key is not Symbol, but String.

Fri Jul  4 18:42:04 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y (must_be_dynamic_symbol): fix missed-condition.

Fri Jul  4 18:38:11 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y (rb_pin_dynamic_symbol): should be `static' function.

Fri Jul  4 18:03:35 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y (must_be_dynamic_symbol): refactoring.
	  * add `inline'.
	  * use UNLIKELY().
	  * check only DYNAMIC_SYM_P(), otherwise it is a bug.
	  * lookup_id_str() is not needed in second condition.

Fri Jul  4 11:53:56 2014  Koichi Sasada  <ko1@atdot.net>

	* parse.y: remove unused code
	  surrounded by `#if ENABLE_SELECTOR_NAMESPACE'

Fri Jul  4 10:08:24 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* test/rubygems/test_gem_package.rb: avoid tempfile leaks using Tempfile#close!
	* test/rubygems/test_gem_request_set.rb: ditto.
	* test/rubygems/test_gem_request_set_gem_dependency_api.rb: ditto.

Fri Jul  4 04:42:05 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/response.rb (Net::Inflater#inflate_adapter):
	  prevent automatic encoding conversion.

Fri Jul  4 04:39:52 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/net/http/response.rb (Net::HTTPResponse.each_response_header):
	  raise first exception even if inflate_body_io.finish raises error.
	  when begin block raises error, finish usually raises error too.

Fri Jul  4 02:56:04 2014  NARUSE, Yui  <naruse@ruby-lang.org>

	* lib/uri/generic.rb (URI::Generic#query=): remove validation, just