@@ -5119,10 +5119,21 @@ rb_gc_force_recycle(VALUE p)
      */
 }
 
+#ifndef MARK_OBJECT_ARY_BUCKET_SIZE
+#define MARK_OBJECT_ARY_BUCKET_SIZE 1024
+#endif
+
 void
 rb_gc_register_mark_object(VALUE obj)
 {
-    VALUE ary = GET_THREAD()->vm->mark_object_ary;
+    VALUE ary_ary = GET_THREAD()->vm->mark_object_ary;
+    VALUE ary = rb_ary_last(0, 0, ary_ary);
+
+    if (ary == Qnil || RARRAY_LEN(ary) >= MARK_OBJECT_ARY_BUCKET_SIZE) {
+	ary = rb_ary_tmp_new(MARK_OBJECT_ARY_BUCKET_SIZE);
+	rb_ary_push(ary_ary, ary);
+    }
+
     rb_ary_push(ary, obj);
 }
 
